--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ xarray>=0.19.0
 cfgrib>=0.9.9.0
 requests>=2.26.0
 psutil>=5.8.0
-aurora  # You'll need to install this from the appropriate source 
+git+https://github.com/microsoft/aurora.git 
 streamlit>=1.28.0
 plotly>=5.17.0
 folium>=0.14.0
@@ -12,4 +12,5 @@ streamlit-folium>=0.15.0
 pandas>=1.5.0
 matplotlib>=3.6.0
 seaborn>=0.12.0
-netCDF4>=1.6.0 
+netCDF4>=1.6.0
+cdsapi>=0.5.0 
